# experimental

./: Cargo.toml  README.md  fortunes
blender-tile-render/: .gitignore  LICENSE  README.md  index.html  run.cmd  tile-web.py
bpf/: Makefile  README.md  bpf.c
cmake/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
docs/: handy.md  honeycomb-lx2.md
endian/: Makefile  README.md  endian.c  endian.h  test_endian.c
jekyll-import-gplus/: README.md  import.py
minecraft/: Makefile  minecraft-server  minecraft.service
prometheus/: README.md  prometheus.py
rust/fortune/: Cargo.toml  README.md  fortune.service  fortunes
rust/fortune/src/: main.rs
rust/fortune/tutorial/: book.toml
rust/fortune/tutorial/src/: getting_started.md
rust/jsonrpc/: Cargo.toml
rust/jsonrpc/examples/client/: Cargo.toml
rust/jsonrpc/examples/client/src/: main.rs
rust/jsonrpc/examples/server/: Cargo.toml
rust/jsonrpc/examples/server/src/: main.rs
rust/jsonrpc/src/: channel.rs  client.rs  lib.rs  message.rs  server.rs
rust/process/: Cargo.toml
rust/process/src/: main.rs
rust/python/: Cargo.toml
rust/python/src/: main.rs
rust/wasm/: Cargo.toml  index.html
rust/wasm/src/: lib.rs
rust/wasm/src/util/: bindings.rs  (+1 more)
src/: main.rs
tools/: local-server.py
webgpu/: README.md
webgpu/hello-texture/: README.md  index.html
webgpu/hello-texture/shaders/: shader.wgsl
webgpu/hello-triangle/: README.md  index.html
webgpu/hello-triangle/shaders/: triangle.frag.wgsl  triangle.vert.wgsl
webgpu/snes-shader/: index.html
webgpu/snes-shader/shaders/: shader.wgsl
