[package]
name = "client"
version = "0.1.0"
authors = ["David Coles <coles.david@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc = { path = "../.." }
tokio = { version = "1", features = ["full"] }
