[package]
name = "server"
version = "0.1.0"
authors = ["David Coles <coles.david@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
jsonrpc = { path = "../.." }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
